--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
         padding: 0px;
         color: white;
 		font-family: 'Museo500', 'Museo500FF', Arial;
-		background-color: #000000;
+		background-color:#000000;
 		}
 	  
       header
@@ -32,33 +32,35 @@
         background-color:#FFFFFF;
 		color:darkblue;
 		padding:10px;
-		margin-left: auto;
-		margin-right: auto;
 		}
 	  
 	  header *
 		{
-		vertical-align:middle; 
-        margin-right:40px;		
+		text-align:center;
+		vertical-align:middle; 		
 		}
 
       main
 		{
-        background-color: #00008B;
+        background-color: #00007A;
 	    padding:10px 10px 50px 10px;
-		margin-left: auto;
-		margin-right: auto;
 		min-width: 600px;
-		width: 85%;
 		}
 	  
       nav
 		{     
-        background-color: #000000;
-		color:white;
+		text-align: center;
+        color:white;
 		padding: 10px;
-		margin-left: auto;
-		margin-right: auto;
+		<!-- Code sourced from http://www.colorzilla.com/gradient-editor/ -->
+		background: #45484d; /* Old browsers */
+		background: -moz-linear-gradient(top,  #45484d 0%, #000000 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#45484d), color-stop(100%,#000000)); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top,  #45484d 0%,#000000 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top,  #45484d 0%,#000000 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top,  #45484d 0%,#000000 100%); /* IE10+ */
+		background: linear-gradient(to bottom,  #45484d 0%,#000000 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
 		}
 
 	  ul
@@ -82,11 +84,24 @@
 		padding: 10px;
 		}
 	 
-	  a:hover
+	  li>a:hover
 		{
-		color: black;
-		background-color: #F0F0F0;
-		border-radius: 5px;
+		background-color: #00007A;
+		border-radius: 3px;
+		<!-- Code sourced from http://www.colorzilla.com/gradient-editor/ -->
+		background: #000000; /* Old browsers */
+		background: -moz-linear-gradient(top,  #000000 0%, #45484d 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#000000), color-stop(100%,#45484d)); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top,  #000000 0%,#45484d 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top,  #000000 0%,#45484d 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top,  #000000 0%,#45484d 100%); /* IE10+ */
+		background: linear-gradient(to bottom,  #000000 0%,#45484d 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#45484d',GradientType=0 ); /* IE6-9 */
+		}
+		
+	  .current-page
+		{
+		
 		}
 		
 	  footer
@@ -98,6 +113,15 @@
 		bottom: 0px;
 		width: 100%;
 		text-align: right;
+		<!-- Code sourced from http://www.colorzilla.com/gradient-editor/ -->
+		background: #1e1e20; /* Old browsers */
+		background: -moz-linear-gradient(top,  #1e1e20 0%, #000000 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1e1e20), color-stop(100%,#000000)); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top,  #1e1e20 0%,#000000 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top,  #1e1e20 0%,#000000 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top,  #1e1e20 0%,#000000 100%); /* IE10+ */
+		background: linear-gradient(to bottom,  #1e1e20 0%,#000000 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e1e20', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
 		}
 	  
 	  footer *
