--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 		{
         font-size:259%;
         font-weight:bold;
-        background-color:#FFFFFF;
+        background-color:#000000;
 		color:darkblue;
 		padding:10px;
 		}
@@ -45,6 +45,7 @@
         background-color: #00007A;
 	    padding:10px 10px 50px 10px;
 		min-width: 600px;
+		text-align: justify; 
 		}
 	  
       nav
