--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@
 		{
         background-color: #00007A;
 	    padding:10px 10px 50px 10px;
-		min-width: 600px;
 		text-align: justify; 
 		}
 	  
@@ -53,7 +52,7 @@
 		text-align: center;
         color:white;
 		padding: 10px;
-		<!-- Code sourced from http://www.colorzilla.com/gradient-editor/ -->
+		/* Code sourced from http://www.colorzilla.com/gradient-editor/ --> */
 		background: #45484d; /* Old browsers */
 		background: -moz-linear-gradient(top,  #45484d 0%, #000000 100%); /* FF3.6+ */
 		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#45484d), color-stop(100%,#000000)); /* Chrome,Safari4+ */
@@ -89,7 +88,7 @@
 		{
 		background-color: #00007A;
 		border-radius: 3px;
-		<!-- Code sourced from http://www.colorzilla.com/gradient-editor/ -->
+		/* Code sourced from http://www.colorzilla.com/gradient-editor/ --> */
 		background: #000000; /* Old browsers */
 		background: -moz-linear-gradient(top,  #000000 0%, #45484d 100%); /* FF3.6+ */
 		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#000000), color-stop(100%,#45484d)); /* Chrome,Safari4+ */
@@ -114,7 +113,7 @@
 		bottom: 0px;
 		width: 100%;
 		text-align: right;
-		<!-- Code sourced from http://www.colorzilla.com/gradient-editor/ -->
+		/* Code sourced from http://www.colorzilla.com/gradient-editor/ --> */
 		background: #1e1e20; /* Old browsers */
 		background: -moz-linear-gradient(top,  #1e1e20 0%, #000000 100%); /* FF3.6+ */
 		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1e1e20), color-stop(100%,#000000)); /* Chrome,Safari4+ */
