--- a/style.css
+++ b/style.css
@@ -1,37 +1,43 @@
-	@font-face {
-		  font-family: "Museo300";
-		  src: url("http://mams.rmit.edu.au/6crm0fncu40d1.eot");
-		  src: url("http://mams.rmit.edu.au/6crm0fncu40d1.eot?#iefix") format("embedded-opentype"),
-			   url("http://mams.rmit.edu.au/x3u2oqckf06.ttf") format("truetype"),
-			   url("http://mams.rmit.edu.au/ymm4mqckf06.svg#Museo300") format("svg");
-		  font-weight: normal;
+		@font-face /* font sourced from Google Fonts */
+		{
+		font-family: 'Open Sans';
+		font-style: normal;
+		font-weight: 400;
+		src: local('Open Sans'), local('OpenSans'), url(http://fonts.gstatic.com/s/opensans/v9/cJZKeOuBrn4kERxqtaUH3VtXRa8TVwTICgirnJhmVJw.woff2) format('woff2'), url(http://fonts.gstatic.com/s/opensans/v9/cJZKeOuBrn4kERxqtaUH3T8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
 		}
-
-		@font-face {
-		  font-family: "Museo500";
-		  src: url("http://mams.rmit.edu.au/6fpj1fncu40d1.eot");
-		  src: url("http://mams.rmit.edu.au/6fpj1fncu40d1.eot?#iefix") format("embedded-opentype"),
-			   url("http://mams.rmit.edu.au/nwhtz3g0e17.ttf") format("truetype"),
-			   url("http://mams.rmit.edu.au/9u52z3g0e17.svg#Museo500") format("svg");
-		  font-weight: normal;
+		@font-face /* font sourced from Google Fonts */
+		{
+		font-family: 'Open Sans';
+		font-style: normal;
+		font-weight: 700;
+		src: local('Open Sans Bold'), local('OpenSans-Bold'), url(http://fonts.gstatic.com/s/opensans/v9/k3k702ZOKiLJc3WVjuplzOgdm0LZdjqr5-oayXSOefg.woff2) format('woff2'), url(http://fonts.gstatic.com/s/opensans/v9/k3k702ZOKiLJc3WVjuplzHhCUOGz7vYGh680lGh-uXM.woff) format('woff');
 		}
+		@font-face /* font sourced from Google Fonts */
+		{
+		font-family: 'Gloria Hallelujah';
+		font-style: normal;
+		font-weight: 400;
+		src: local('Gloria Hallelujah'), local('GloriaHallelujah'), url(http://fonts.gstatic.com/s/gloriahallelujah/v6/CA1k7SlXcY5kvI81M_R28cNDay8z-hHR7F16xrcXsJw.woff2) format('woff2'), url(http://fonts.gstatic.com/s/gloriahallelujah/v6/CA1k7SlXcY5kvI81M_R28Y5mSNQmgKshuii2YddNQzE.woff) format('woff');
+		}	
+		
       html,
       body
 		{
         margin: 0px;
         padding: 0px;
         color: white;
-		font-family: 'Museo500', 'Museo500FF', Arial;
-		background-color:#000000;
+		font-family: Open Sans;
+		background-color:#00007A;
 		}
 	  
       header
 		{
-        font-size:259%;
-        font-weight:bold;
+        font-size:300%;
+		font-weight:bold;
         background-color:#000000;
 		color:darkblue;
-		padding:10px;
+		padding:5px;
+		font-family: Gloria Hallelujah;
 		}
 	  
 	  header *
@@ -48,10 +54,11 @@
 	  
       nav
 		{     
+		font-weight:bold;
 		text-align: center;
         color:white;
 		padding: 10px;
-		/* Code sourced from http://www.colorzilla.com/gradient-editor/ --> */
+		/* Code sourced from http://www.colorzilla.com/gradient-editor/ */
 		background: #45484d; /* Old browsers */
 		background: -moz-linear-gradient(top,  #45484d 0%, #000000 100%); /* FF3.6+ */
 		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#45484d), color-stop(100%,#000000)); /* Chrome,Safari4+ */
@@ -60,6 +67,7 @@
 		background: -ms-linear-gradient(top,  #45484d 0%,#000000 100%); /* IE10+ */
 		background: linear-gradient(to bottom,  #45484d 0%,#000000 100%); /* W3C */
 		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+		/* end of code sourcing */
 		}
 
 	  ul
@@ -87,7 +95,7 @@
 		{
 		background-color: #00007A;
 		border-radius: 3px;
-		/* Code sourced from http://www.colorzilla.com/gradient-editor/ --> */
+		/* Code sourced from http://www.colorzilla.com/gradient-editor/ */
 		background: #000000; /* Old browsers */
 		background: -moz-linear-gradient(top,  #000000 0%, #45484d 100%); /* FF3.6+ */
 		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#000000), color-stop(100%,#45484d)); /* Chrome,Safari4+ */
@@ -96,13 +104,9 @@
 		background: -ms-linear-gradient(top,  #000000 0%,#45484d 100%); /* IE10+ */
 		background: linear-gradient(to bottom,  #000000 0%,#45484d 100%); /* W3C */
 		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#45484d',GradientType=0 ); /* IE6-9 */
+		/* end of code sourcing */
 		}
-		
-	  .current-page
-		{
-		
-		}
-		
+	
 	  footer
 		{     
         background-color:#000000;
@@ -112,7 +116,7 @@
 		bottom: 0px;
 		width: 100%;
 		text-align: right;
-		/* Code sourced from http://www.colorzilla.com/gradient-editor/ --> */
+		/* Code sourced from http://www.colorzilla.com/gradient-editor/ */
 		background: #1e1e20; /* Old browsers */
 		background: -moz-linear-gradient(top,  #1e1e20 0%, #000000 100%); /* FF3.6+ */
 		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1e1e20), color-stop(100%,#000000)); /* Chrome,Safari4+ */
@@ -121,6 +125,7 @@
 		background: -ms-linear-gradient(top,  #1e1e20 0%,#000000 100%); /* IE10+ */
 		background: linear-gradient(to bottom,  #1e1e20 0%,#000000 100%); /* W3C */
 		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e1e20', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+		/* end of code sourcing */
 		}
 	  
 	  footer *
